--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                     <input type="password" name="senha" placeholder="Senha" required>
                 </div>
                 <button type="submit" class="submit">Login</button>
-                <p class="footer">Não tem conta? <a href="registro.html" class="link">Por favor, registre-se</a>
+                <p class="footer">Não possui conta? <a href="registro.html" class="link">Por favor, registre-se</a>
                 </p>
             </form>
         </div>
