mudança no modo dark

--- a/1ano.html
+++ b/1ano.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/navbar.css">
     <link rel="stylesheet" href="./CSS/anos.css">
+    <link rel="stylesheet" href="./CSS/mododark.css">
 
     <title>BIMESTRES</title>
 
@@ -22,17 +23,17 @@
     </header>
     <div class="main">
         <div class="titulo">
-            <h1 class="titulo">BIMESTRES</h1>
+            <h1 class="titulo" id="logo">BIMESTRES</h1>
         </div>
         <div class="quadros">
-            <div class="bimestre">
+            <div class="bimestre" >
                 <h1>1º BIMESTRE</h1>
                 <ul class="links">
                     <li class="aulas"><a class="links"href="#">Conjuntos</a></li>
                     <li class="aulas"><a class="links"href="#">Funções</a></li>
                 </ul>
             </div>
-            <div class="bimestre">
+            <div class="bimestre" >
                 <h1>2º BIMESTRE</h1>
                 <ul class="links">
                     <li class="aulas"><a class="links"href="#">Função do 2 grau</a></li>
@@ -40,14 +41,14 @@
                     <li class="aulas"><a class="links"href="#">Função Modular</a></li>
                 </ul>
             </div>
-            <div class="bimestre">
+            <div class="bimestre" >
                 <h1>3º BIMESTRE</h1>
                 <ul class="links">
                     <li class="aulas"><a class="links"href="#">Potenciação</a></li>
                     <li class="aulas"><a class="links"href="#">Função Exponencial</a></li>
                 </ul>
             </div>
-            <div class="bimestre">
+            <div class="bimestre" >
                 <h1>4º BIMESTRE</h1>
                 <ul class="links">
                     <li class="aulas"><a class="links" href="#">Logaritimo</a></li>
