--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    
     <link rel="stylesheet" href="./CSS/index.css">
     <link rel="stylesheet" href="./CSS/sidebarestilo.css">
+    <link rel="stylesheet" href="./CSS/mododark.css">
     <link rel="website icon" type="png" href="./svg/M.png">
 </head>
 
