--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./CSS/login.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="./CSS/navbar.css">
+    <link rel="stylesheet" href="./CSS/mododark.css">
 </head>
 
 <body>
