--- a/registro.html
+++ b/registro.html
@@ -7,6 +7,7 @@
     <title>Registro</title>
     <link rel="stylesheet" href="./CSS/navbar.css">
     <link rel="stylesheet" href="./CSS/registro.css">
+    <link rel="stylesheet" href="./CSS/mododark.css">
 
 </head>
 
